<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_room"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="36sp"/>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/input_layout_max_user"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@color/colorPrimaryDark"
        >
    <EditText
        android:id="@+id/ET_maxUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/room_capacity"
        android:textColor="@android:color/black"
        android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout

        android:id="@+id/input_layout_price"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/ET_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/price_hour"
        android:textColor="@android:color/black"
        android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/B_addRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:layout_marginTop="10dp"/>

    
</LinearLayout>
