<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/roomItem">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="5dp"
        app:cardElevation="18dp"
        android:elevation="10dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/tv_roomNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room1"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:fontFamily="monospace"/>


        <TextView
            android:id="@+id/tv_maxUserRoomItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_users"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_priceRoomItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:drawable/ic_delete"
            android:layout_marginTop="40dp"/>

    </android.support.v7.widget.CardView>

</LinearLayout>
